Changing checking version URL

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,6 @@
     ],
     "version": "0.0.1",
     "skipBackup": true,
-    "checkVersionUrl": "https://devcrm.it/version",
+    "checkVersionUrl": "https://devcrm.it",
     "releaseDate": "2020-12-12"
 }
