--- a/.editorconfig
+++ b/.editorconfig
@@ -9,5 +9,12 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[{*.yml,*.yaml}]
+indent_style = space
+indent_size = 2
+
 [NOTICE]
+insert_final_newline = false
+
+[*.txt]
 insert_final_newline = false
