--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
     "name": "espocrm-ext-dubas-uuid-field",
     "version": "1.0.0",
+    "packageManager": "pnpm@7.0.1",
     "description": "",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "eslint:fix": "eslint --fix src/**/src/**/*.js"
+        "eslint:fix": "eslint --fix src/**/src/**/*.js",
+        "lint:json": "prettier --write src/**/*.json"
     },
-    "author": "DUBAS - contact@dubas.pro",
+    "author": "DUBAS S.C. - contact@dubas.pro",
     "license": "GPL-3.0",
     "dependencies": {
-        "archiver": "^4.0.1",
-        "fs-extra": "^9.0.0",
-        "mv": "^2.1.1",
-        "request": "^2.88.2",
-        "unzipper": "^0.10.11"
-    },
-    "devDependencies": {
         "eslint": "^7.25.0",
-        "eslint-plugin-header": "^3.1.1"
+        "eslint-plugin-header": "^3.1.1",
+        "prettier": "^2.6.2"
     }
 }
