feat(docker): update developer instance

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,116 +6,74 @@ version: '3'
 ################################################################################
 services:
   # ------------------------------------------------------------
-  # Traefik Reverse Proxy
-  # ------------------------------------------------------------
-  traefik:
-    image: traefik:latest
-    container_name: traefik
-    restart: always
-
-    ports:
-      - "${HTTP_PORT:-8080}:80"
-
-    command:
-      - --log.level=DEBUG
-
-      - --entrypoints.http.address=:80
-      - --entryPoints.http.forwardedheaders.insecure
-
-      - --providers.docker=true
-      - --providers.docker.exposedbydefault=false
-
-      - --api=false
-      - --api.insecure=false
-      - --api.dashboard=false
-
-      - --global.sendanonymoususage=false
-      - --global.checknewversion=false
-      - --pilot.dashboard=false
-
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-
-  # ------------------------------------------------------------
   # PHP
   # ------------------------------------------------------------
-  php:
+  php: &php
     build: ./docker/php
     container_name: php
-    hostname: php
-
+    restart: unless-stopped
     working_dir: /var/www/default
 
     environment:
-      ##
-      ## Debug/Logging
-      ##
-      - DEBUG_ENTRYPOINT=2
-      - DEBUG_COMPOSE_ENTRYPOINT=2
-      - DOCKER_LOGS=1
-
-      - SSH_AUTH_SOCK=${SSH_AUTH_SOCK}
-      - COMPOSER_MEMORY_LIMIT=-1
+      NEW_UID: 1000
+      NEW_GID: 1000
+      DEBUG_ENTRYPOINT: '2'
+      DEBUG_COMPOSE_ENTRYPOINT: '2'
+      DOCKER_LOGS: '1'
+      COMPOSER_MEMORY_LIMIT: '-1'
+      COMPOSER_POOL_OPTIMIZER: '0'
 
     volumes:
-      - ${PWD}:/var/www/default:rw
-
-      # Users SSH directory (read-only)
-      - ${SSH_AUTH_SOCK_DIR:-/dev/null}:${SSH_AUTH_SOCK_DIR:-/dev/null}
-      - ${HOME}/.ssh:/home/devilbox/.ssh:ro
-
-      # Users .bash_history file
-      - ${HOME}/.bash_history:/home/devilbox/.bash_history:rw
-
-      # Mount devilbox user-defined PHP-FPM startup *.sh scripts
-      - ${PWD}/docker/cfg/php-startup-${PHP_SERVER:-8.0}:/startup.1.d:rw
-      - ${PWD}/docker/autostart:/startup.2.d:rw
+      - .:/var/www/default:rw
 
   # ------------------------------------------------------------
-  # Web Server
+  # Apache Web Server
   # ------------------------------------------------------------
   httpd:
-    image: devilbox/apache-2.4:latest
+    image: devilbox/apache-2.4:alpine
     container_name: httpd
-    restart: always
-    hostname: httpd
+    restart: unless-stopped
 
     environment:
-      - MAIN_VHOST_DOCROOT=site
-      - PHP_FPM_ENABLE=1
-      - PHP_FPM_SERVER_ADDR=php
-      - PHP_FPM_SERVER_PORT=9000
-      - PHP_FPM_TIMEOUT=180
+      NEW_UID: 1000
+      NEW_GID: 1000
+      MAIN_VHOST_ENABLE: 1
+      MAIN_VHOST_DOCROOT_DIR: site
+      PHP_FPM_ENABLE: 1
+      PHP_FPM_SERVER_ADDR: php
+      PHP_FPM_SERVER_PORT: 9000
+      PHP_FPM_TIMEOUT: 180
+      MAIN_VHOST_BACKEND: conf:phpfpm:tcp:php:9000
+
+    ports:
+      - '8080:80'
 
     volumes:
-      - ${PWD}:/var/www/default:rw
+      - .:/var/www/default:ro
 
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.espocrm.rule=Host(`localhost`)
-      - traefik.http.routers.espocrm.entrypoints=http
+    depends_on:
+      - php
 
   # ------------------------------------------------------------
   # MySQL Database
   # ------------------------------------------------------------
   mysql:
-    image: devilbox/mysql:mariadb-10.5
+    image: mariadb:${MYSQL_VERSION:-10.6}
     container_name: mysql
-    hostname: mysql
+    restart: unless-stopped
 
     ports:
-      - "3${HTTP_PORT:-8080}:3306"
+      - '3306:3306'
 
     environment:
-      - MYSQL_ROOT_PASSWORD
-      - MYSQL_ALLOW_EMPTY_PASSWORD=${MYSQL_ALLOW_EMPTY_PASSWORD:-yes}
-      - MYSQL_USER=${MYSQL_PASSWORD:-espocrm}
-      - MYSQL_DATABASE=${MYSQL_DATABASE:-espocrm}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-espocrm}
+      MYSQL_ROOT_PASSWORD: ''
+      MYSQL_ALLOW_EMPTY_PASSWORD: '${MYSQL_ALLOW_EMPTY_PASSWORD:-yes}'
+      MYSQL_USER: '${MYSQL_PASSWORD:-espocrm}'
+      MYSQL_DATABASE: '${MYSQL_DATABASE:-espocrm}'
+      MYSQL_PASSWORD: '${MYSQL_PASSWORD:-espocrm}'
 
     volumes:
       - mysql:/var/lib/mysql:rw
 
 volumes:
-  mysql: null
+  mysql: {}
