--- a/config.php.dist
+++ b/config.php.dist
@@ -1,11 +1,10 @@
 <?php
 return [
-    'theme' => 'DarkVertical',
     'defaultPermissions' => [
         'user' => null,
         'group' => null
     ],
-    'useWebSocket' => true,
+    'useWebSocket' => false,
     'webSocketUrl' => 'ws://localhost:8080/ws',
     'webSocketZeroMQSubscriberDsn' => 'tcp://*:7777',
     'webSocketZeroMQSubmissionDsn' => 'tcp://espocrm-websocket:7777',
