--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
     "name": "espocrm-ext-dubas-uuid-field",
     "version": "1.0.0",
-    "packageManager": "pnpm@7.0.1",
     "description": "",
     "scripts": {
-        "eslint:fix": "eslint --fix src/**/src/**/*.js",
-        "lint:json": "prettier --write src/**/*.json"
+        "js:fix": "eslint --fix src/**/src/**/*.js",
+        "json:fix": "prettier --write src/**/*.json",
+        "php:fix": "composer exec ecs -- --fix --clear-cache",
+        "phpstan": "vendor/bin/phpstan",
+        "rector": "composer exec rector -- --clear-cache"
     },
     "author": "DUBAS S.C. - contact@dubas.pro",
     "license": "GPL-3.0",
