chore(dev): update node devDependencies

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
     "name": "espocrm-ext-dubas-uuid-field",
     "version": "1.0.0",
     "description": "",
+    "engines": {
+        "node": ">=16",
+        "pnpm": "8"
+    },
     "scripts": {
         "js:fix": "eslint --fix src/**/src/**/*.js",
         "json:fix": "prettier --write src/**/*.json",
@@ -11,9 +15,9 @@
     },
     "author": "DUBAS S.C. - contact@dubas.pro",
     "license": "GPL-3.0",
-    "dependencies": {
-        "eslint": "^7.25.0",
+    "devDependencies": {
+        "eslint": "^8.48.0",
         "eslint-plugin-header": "^3.1.1",
-        "prettier": "^2.6.2"
+        "prettier": "^3.0.3"
     }
 }
