chore(dev): php cs fix

--- a/config.php.dist
+++ b/config.php.dist
@@ -1,8 +1,28 @@
 <?php
+/**
+ * This file is part of the Dubas UUID Field - EspoCRM extension.
+ *
+ * DUBAS S.C. - contact@dubas.pro
+ * Copyright (C) 2021-2023 Arkadiy Asuratov, Emil Dubielecki
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
+
 return [
     'defaultPermissions' => [
         'user' => null,
-        'group' => null
+        'group' => null,
     ],
     'useWebSocket' => false,
     'webSocketUrl' => 'ws://localhost:8080/ws',
@@ -15,7 +35,7 @@ return [
     'logger' => [
         'path' => 'data/logs/espo.log',
         'level' => 'DEBUG',
-        'rotation' => false
+        'rotation' => false,
     ],
     'outboundEmailIsShared' => true,
     'outboundEmailFromName' => 'EspoCRM',
