--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,10 +1,20 @@
 parameters:
-  phpVersion: 70400 # PHP 7.4
+  phpVersion: 80000 # PHP 8.0
   level: 8
   paths:
     - src
 
+  excludePaths:
+    analyse:
+      - site
+      - src/*/vendor/*
+
+    analyseAndScan:
+      - src/files/client
+
   bootstrapFiles:
     - site/bootstrap.php
 
-  checkGenericClassInNonGenericObjectType: false
+  inferPrivatePropertyTypeFromConstructor: true
+  treatPhpDocTypesAsCertain: false
+  reportUnmatchedIgnoredErrors: false
